# adventofcode2021

./: .gitignore  README.md  day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  dune
