(executable
 (name day1)
 (modules day1))

(executable
 (name day2)
 (modules day2))

(executable
 (name day3)
 (modules day3))

(executable
 (name day4)
 (modules day4)
 (libraries str))

(executable
 (name day5)
 (modules day5)
 (libraries str))

(executable
 (name day6)
 (modules day6)
 (libraries str))